Fix missing characters message not showing in dark mode

--- a/src/components/CharacterGuard/styles.module.scss
+++ b/src/components/CharacterGuard/styles.module.scss
@@ -1,5 +1,5 @@
 .noCharacter {
     max-width: 20rem;
-    color: #000000;
+    color: #ffffff;
     text-align: center;
 }
